[package]
name = "cargo_$name"
version = "0.0.0-placeholder"
edition = "2021"
description = "This crate is reserved for the rust-linting organization"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
